--- a/base_templates/global/partials/_header.html
+++ b/base_templates/global/partials/_header.html
@@ -1,15 +1,15 @@
 <header class="header">
         <h1 class="header-heading">
             <a href="{% url "contact:index" %}" class="header-link">
-                Schedule
+                Contact List
             </a>
         </h1>
 
         <nav class="menu">
             <ul class="menu-list">
                 <li class="menu-item">
-                    <a href="" class="menu-link">
-                        Link
+                    <a href="{% url "contact:create" %}" class="menu-link">
+                        Create
                     </a>
                 </li>
                 <li class="menu-item">
