--- a/contact/templates/contact/register.html
+++ b/contact/templates/contact/register.html
@@ -1,15 +1,13 @@
 {% extends 'global/base.html' %}
 
 {% block content %}
-  <h1>CREATE CONTACT</h1>
   <div class="form-wrapper">
 
-    <h2>Contact</h2>
+    <h2>Register</h2>
     
     <form 
       action="{{ form_action }}"
       method="POST"
-      enctype="multipart/form-data"
     >
         {% csrf_token %}
 
@@ -25,11 +23,6 @@
                 </div>
             {% endif %}
           </div>
-          {% if field.name == 'picture' and field.value.url %}
-              <div class="form-group">
-                <img src="{{ field.value.url }}" alt="">
-              </div>
-          {% endif %}
     {% endfor %}
       </div>
 
