finished the project

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -18,6 +18,7 @@
     <p><b>Created Date:</b> {{ contact.created_date }}</p>
     <p><b>Description:</b> {{ contact.description }}</p>
     <p><b>Category:</b> {{ contact.category.name }}</p>
+    {% if user == contact.owner %}
     <div class="contact-links">
         <a class="btn btn-link" href="{% url "contact:update" contact.id %}">Update</a>
 
@@ -32,5 +33,7 @@
             {% endif %}
         </form>
     </div>
+    {% endif %}
+
 </div>
 {% endblock content %}
